# juniper.github.io

./: CNAME  README.md  _config.yml  app.py  index.html  index.md  input_to_diagnosis.py  pyproject.toml  usage.py
juniper/: pyvenv.cfg
juniper/Scripts/: activate  activate.bat
src/: usage.ipynb
src/service_providers/: analyzer.py  synthesizer.py
src/services/generator/: address_generator.py  constant_generator.py  llama2_fake_data_generator.py  name_generator.py  openai_fake_data_generator.py
src/services/recognizer/: address_recognizer.py  configuration.py  transformer_recognizer.py
static/css/: webapp.css
static/script/: model_card.js
templates/: carousel.htm  footer.htm  home.htm  navbar.htm  user_input.htm
